--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
   height: 100px;
   width: 200px;
 	top: 0px;
-  left: 31%;
+  left: 40%;
 	overflow: hidden
 }
 	@page {
@@ -18,6 +18,7 @@
     body {
         padding-top: 10px;
         padding-bottom: 72px ;
+	left:0;
     }
 }
 
