--- a/main.css
+++ b/main.css
@@ -82,11 +82,11 @@
 #photo {
 	float: right;
 	position: absolute;
-  height: 150px;
-  width: 200px;
+  	height: 150px;
+  	width: 200px;
 	top: 20px;
 	bottom: 20px;
-  	right: 40%;
+  	left: 40%;
 	overflow: hidden;
 }
 
