--- a/main.css
+++ b/main.css
@@ -10,21 +10,21 @@
 	@page {
         margin-top: 0;
         margin-bottom: 0;
-    }
+   	}
 	svg {
-    	width:200px; /* you can use % */
+    	width:200px;
     	height: 50px;
 	}
 	img#shoot-straight {
    	 width: auto; /* you can use % */
    	 height: auto;
 	}
-    body {
-				font-weight: bold;
+    	body {
+	font-weight: bold;
         padding-top: 10px;
-        padding-bottom: 72px ;
-				margin-left: 0;
-				left: 0;
+        padding-bottom: 72px;
+	margin-left: 0;
+	left: 0;
     }
     .crm-container {
 	font-weight: bold;
