--- a/main.css
+++ b/main.css
@@ -1,39 +1,41 @@
 @media print {
   #crmbuttons {
-	display: none;
+			display: none;
 	}
 	span#photo {
-	left: 72%;
+		left: 72%;
 	}
 	#photo {
-      	left: 72%;
-	height: 125px;
+      left: 72%;
+		  height: 125px;
     	width: 125px;
-	}
+ }
+	img#shoot-straight {
+    	width:auto; /* you can use % */
+    	height: auto;
+ }
 	@page {
         margin-top: 0;
         margin-bottom: 0;
-   	}
+ }
 	svg {
-    	width:200px;
-    	height: 50px;
+				width:200px; /* you can use % */
+				height: 50px;
 	}
-	img#shoot-straight {
-   	 width: auto; /* you can use % */
-   	 height: auto;
-	}
-    	body {
-	font-weight: bold;
-        padding-top: 10px;
-        padding-bottom: 72px;
-	margin-left: 0;
-	left: 0;
+   body {
+				 font-weight: bold;
+				 padding-top: 10px;
+				 padding-bottom: 72px ;
+				 margin-left: 0;
+				 left: 0;
     }
     .crm-container {
-	font-weight: bold;
-	padding-left: 0px;
-	margin-left: 0;
-	left: 0;
+				font-weight: bold;
+				padding-left: 0px;
+				margin-left: 0;
+				left: 0;
+			  width: 450px;
+    		height: 475px
     }
 }
 
@@ -87,8 +89,8 @@
 }
 
 span#photo {
-    width: 200px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
 }
 
 video {
@@ -99,8 +101,8 @@ video {
 #photo {
     float: right;
     position: absolute;
-    height: 150px;
-    width: 200px;
+    height: 125px;
+    width: 125px;
     top: 20px;
     bottom: 20px;
     left: 16%;
@@ -118,111 +120,123 @@ svg {
 }
 
 .float-container{
-	position: relative;
+		position: relative;
 }
 
 #abc {
-width:550px;
-height:500px;
-top:0;
-left:0;
-display:none;
-position:fixed;
-background-color:#ffffff;
-overflow:hidden;
+		width:550px;
+		height:500px;
+		top:0;
+		left:0;
+		display:none;
+		position:fixed;
+		background-color:#ffffff;
+		overflow:hidden;
 }
 
 .form {
-max-width:500px;
-min-width:500px;
-padding:10px 50px;
-border:2px solid gray;
-border-radius:10px;
-font-family:raleway;
-background-color:#313131
+		max-width:500px;
+		min-width:500px;
+		padding:10px 50px;
+		border:2px solid gray;
+		border-radius:10px;
+		font-family:raleway;
+		background-color:#313131
 }
 
 img#close {
-position:absolute;
-right:-14px;
-top:-14px;
-cursor:pointer
+		position:absolute;
+		right:-14px;
+		top:-14px;
+		cursor:pointer
 }
+
 div#popupContact {
-position:absolute;
-left:50%;
-top:17%;
-margin-left:-202px;
-font-family:'Raleway',sans-serif
+		position:absolute;
+		left:50%;
+		top:17%;
+		margin-left:-202px;
+		font-family:'Raleway',sans-serif
 }
+
 p {
-margin-top:30px
+		margin-top:30px
 }
+
 h2 {
-padding:20px 35px;
-margin:-10px -50px;
-text-align:center;
-border-radius:10px 10px 0 0
+		padding:20px 35px;
+		margin:-10px -50px;
+		text-align:center;
+		border-radius:10px 10px 0 0
 }
+
 hr {
-margin:10px -50px;
-border:0;
-border-top:1px solid #ccc
+		margin:10px -50px;
+		border:0;
+		border-top:1px solid #ccc
 }
+
 input[type=text] {
-width:82%;
-padding:10px;
-margin-top:30px;
-border:1px solid #ccc;
-padding-left:40px;
-font-size:16px;
-font-family:raleway
+		width:82%;
+		padding:10px;
+		margin-top:30px;
+		border:1px solid #ccc;
+		padding-left:40px;
+		font-size:16px;
+		font-family:raleway
 }
+
 #name {
-background-image:url(../images/name.jpg);
-background-repeat:no-repeat;
-background-position:5px 7px
+		background-image:url(../images/name.jpg);
+		background-repeat:no-repeat;
+		background-position:5px 7px
 }
 #email {
-background-image:url(../images/email.png);
-background-repeat:no-repeat;
-background-position:5px 7px
+		background-image:url(../images/email.png);
+		background-repeat:no-repeat;
+		background-position:5px 7px
 }
+
 textarea {
-background-image:url(../images/msg.png);
-background-repeat:no-repeat;
-background-position:5px 7px;
-width:82%;
-height:95px;
-padding:10px;
-resize:none;
-margin-top:30px;
-border:1px solid #ccc;
-padding-left:40px;
-font-size:16px;
-font-family:raleway;
-margin-bottom:30px
+		background-image:url(../images/msg.png);
+		background-repeat:no-repeat;
+		background-position:5px 7px;
+		width:82%;
+		height:95px;
+		padding:10px;
+		resize:none;
+		margin-top:30px;
+		border:1px solid #ccc;
+		padding-left:40px;
+		font-size:16px;
+		font-family:raleway;
+		margin-bottom:30px
 }
 
 #submit {
-margin-top:30px;
-text-decoration:none;
-width:100%;
-text-align:center;
-display:block;
-background-color:#6991f5;
-color:#fff;
-padding:10px 0;
-font-size:20px;
-cursor:pointer;
-border-radius:5px;
+		margin-top:30px;
+		text-decoration:none;
+		width:100%;
+		text-align:center;
+		display:block;
+		background-color:#6991f5;
+		color:#fff;
+		padding:10px 0;
+		font-size:20px;
+		cursor:pointer;
+		border-radius:5px
 }
 
 span {
-font-weight:300
+		font-weight:300;
 }
 
 button {
-cursor:pointer;
+		cursor:pointer;
 }
 
+span#photo {
+		height: 125px;
+		width: 125px;
+		left: 22%
+}
