--- a/main.css
+++ b/main.css
@@ -1,51 +1,60 @@
-@media print {
+@media print { /* view for print preview */
   #crmbuttons {
-	display: none;
+			display: none;
 	}
 	span#photo {
-		left: 72%;
+		float: right;
+    position: absolute;
+    height: 125px;
+    width: 125px;
+    top: 20px;
+    bottom: 20px;
+    left: 58%;
+    overflow: hidden;
 	}
-	#photo {
-      		left: 72%;
-		height: 125px;
-    		width: 125px;
- }
+	
 	img#shoot-straight {
-    		width:auto; /* you can use % */
-    		height: auto;
+    	width:auto; /* you can use % */
+    	height: auto;
  }
 	@page {
-        	margin-top: 0;
-        	margin-bottom: 0;
+        margin-top: 0;
+        margin-bottom: 0;
  }
-	svg {
-		width:200px; /* you can use % */
-		height: 50px;
+	svg#barcode {
+			margin-bottom:10px;
+  		text-align: right;
+			display: block;
+			margin-left: 40%;
+			width:170px; 
+			height: 40px;
 	}
    body {
-		font-weight: bold;
-		padding-top: 10px;
-		padding-bottom: 72px ;
-		margin-left: 0;
-		left: 0;
+				 font-weight: bold;
+				 padding-top: 10px;
+				 padding-bottom: 72px ;
+				 margin-left: 0;
+				 left: 0;
     }
     .crm-container {
-		font-weight: bold;
-		padding-left: 0px;
-		margin-left: 0;
-		left: 0;
-		width: 450px;
+				font-weight: bold;
+				padding-left: 0px;
+				margin-left: 0;
+				left: 0;
+			  width: 450px;
     		height: 475px
     }
 }
 
+/* view for web % */
+
 #name {
 	font-size: 25px;
+	font-weight: bold; 
 }
 
 #clubid {
-	font-size: 20px;
-	
+	font-size: 22px;
 }
 
 #issueDate {
@@ -54,9 +63,12 @@
 }
 
 .crm-container{
-	width: 450px;
-    	height: 475px
+			  width: 450px;
+    		height: 350px
  }
+.print-div {
+    overflow: hidden;
+}
 #crmbuttons{
     width: 100%;
     margin: 100px auto;
@@ -85,7 +97,8 @@
 #barcode{
 	margin-bottom:10px;
   text-align: right;
-	float:right
+	display: block;
+	margin-left: 50%;
 }
 
 span#photo {
@@ -238,5 +251,4 @@ button {
 span#photo {
 		height: 125px;
 		width: 125px;
-		left: 16%
 }
