--- a/main.css
+++ b/main.css
@@ -1,47 +1,47 @@
 @media print { /* view for print preview */
   #crmbuttons {
-			display: none;
+	display: none;
 	}
 	span#photo {
 		float: right;
-    position: absolute;
-    height: 125px;
-    width: 125px;
-    top: 20px;
-    bottom: 20px;
-    left: 58%;
-    overflow: hidden;
+    		position: absolute;
+    		height: 125px;
+    		width: 125px;
+   		top: 20px;
+    		bottom: 20px;
+    		left: 58%;
+    		overflow: hidden;
 	}
 	
 	img#shoot-straight {
-    	width:auto; /* you can use % */
-    	height: auto;
+    		width:auto; /* you can use % */
+    		height: auto;
  }
 	@page {
-        margin-top: 0;
-        margin-bottom: 0;
+        	margin-top: 0;
+        	margin-bottom: 0;
  }
 	svg#barcode {
-			margin-bottom:10px;
+		margin-bottom:10px;
   		text-align: right;
-			display: block;
-			margin-left: 40%;
-			width:170px; 
-			height: 40px;
+		display: block;
+		margin-left: 40%;
+		width: 40%; 
+		height: 10%
 	}
    body {
-				 font-weight: bold;
-				 padding-top: 10px;
-				 padding-bottom: 72px ;
-				 margin-left: 0;
-				 left: 0;
+		font-weight: bold;
+		padding-top: 10px;
+		padding-bottom: 72px ;
+		margin-left: 0;
+		left: 0;
     }
     .crm-container {
-				font-weight: bold;
-				padding-left: 0px;
-				margin-left: 0;
-				left: 0;
-			  width: 450px;
+		font-weight: bold;
+		padding-left: 0px;
+		margin-left: 0;
+		left: 0;
+		width: 450px;
     		height: 475px
     }
 }
