--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
         	margin-bottom: 0;
  }
 	svg#barcode {
-		margin-bottom:10px;
+		margin-bottom:5%;
   		text-align: right;
 		display: block;
 		margin-left: 50%;
