--- a/main.css
+++ b/main.css
@@ -78,42 +78,48 @@ only screen and (min-device-pixel-ratio : 1.5) {
 }
 
 @media print {
-  #crmbuttons {
-			display: none;
-	}
-	span#photo {
-		left: 70%;
-	}
-	#photo {
+    #crmbuttons {
+        display: none;
+    }
+    div#template-div {
+        display: none;
+    }
+    div#buttons{
+        display: none;
+    }
+    span#photo {
+        left: 70%;
+    }
+    #photo {
       left: 70%;
-		  height: 125px;
-    	width: 125px;
- }
-	img#shoot-straight {
-    	height: auto;
- }
-	@page {
+          height: 125px;
+        width: 125px;
+     }
+    img#shoot-straight {
+        height: auto;
+    }
+    @page {
         margin-top: 0;
         margin-bottom: 0;
- }
-	svg {
-				width:200px; /* you can use % */
-				height: 50px;
-	}
-   body {
-				 font-weight: bold;
-				 padding-top: 10px;
-				 padding-bottom: 72px ;
-				 margin-left: 0;
-				 left: 0;
     }
+    svg {
+        width:200px; /* you can use % */
+        height: 50px;
+    }
+    body {
+         font-weight: bold;
+         padding-top: 10px;
+         padding-bottom: 72px ;
+         margin-left: 0;
+         left: 0;
+        }
     .crm-container {
-				font-weight: bold;
-				padding-left: 0px;
-				margin-left: 0;
-				left: 0;
-			  width: 450px;
-    		height: 475px
+        font-weight: bold;
+        padding-left: 0px;
+        margin-left: 0;
+        left: 0;
+        width: 450px;
+        height: 475px
     }
 }
 
@@ -132,23 +138,50 @@ only screen and (min-device-pixel-ratio : 1.5) {
 }
 
 .crm-container{
-			  width: 450px;
-    		height: 475px
+    width: 450px;
+    height: auto
  }
+
+ div#buttons {
+    width: 450px;
+    height: auto
+ }
+
 #crmbuttons{
-    width: 100%;
-    margin: 100px auto;
+    width: 450px;
+    height: auto
 }
 .crmBtn{
     width: 30%;
     height: 50px;
+    margin-left: 2%
 }
 
 button.sendBtn {
-	  height: 50px;
+	height: 50px;
     margin: -20px -50px; 
     position: relative;
     left: 10%;
+}
+
+button#template{
+    margin-top:5%;
+    width: 100%;
+}
+
+div#template-div {
+    width: 450px;
+    height: auto;
+    margin-top:3%;
+}
+
+div#temp-header {
+    text-align: center;
+    margin: auto;
+}
+
+div#line {
+    line-height:5%;
 }
 
 #logo{
@@ -166,10 +199,14 @@ button.sendBtn {
 #expiration{
   line-height: 200%;
 }
+#barcode-div{
+    height: 80px;
+    width: 100%
+}
 
 #barcode{
 	margin-bottom:10px;
-  text-align: right;
+    text-align: right;
 	float:right
 }
 
@@ -239,14 +276,14 @@ p {
 		margin-top:30px
 }
 
-h2 {
+#form h2 {
 		padding:20px 35px;
 		margin:-10px -50px;
 		text-align:center;
 		border-radius:10px 10px 0 0
 }
 
-hr {
+#form hr {
 		margin:10px -50px;
 		border:0;
 		border-top:1px solid #ccc
