--- a/family.css
+++ b/family.css
@@ -16,6 +16,10 @@ div#fam-head {
     text-align: center;
 }
 
+h2 {
+    line-height:0%
+}
+
 h4 {
     line-height:0%
 }
@@ -97,6 +101,17 @@ svg {
 #barcode-div{
     height: 80px;
     width: 100%
+}
+
+span#clubid {
+    text-align: left;
+    display: inline-block;
+}
+
+span#issueDate {
+    text-align: right;
+    display: inline-block;
+    padding-left: 15px
 }
 
 
