--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
+@media all and (max-width:30em){
+    button.crmBtn{
+        display:block;
+        margin:0.4em auto;
+    }
+}
+
+@media only screen
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
 	span#photo {
@@ -164,6 +171,7 @@ button.sendBtn {
     left: 10%;
 }
 
+
 button#template{
     margin-top:5%;
     width: 100%;
@@ -232,119 +240,119 @@ svg {
 }
 
 .float-container{
-		position: relative;
+    position: relative;
 }
 
 #abc {
-		width:550px;
-		height:500px;
-		top:0;
-		left:0;
-		display:none;
-		position:fixed;
-		background-color:#ffffff;
-		overflow:hidden;
-		box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+    width:550px;
+    height:500px;
+    top:0;
+    left:0;
+    display:none;
+    position:fixed;
+    background-color:#ffffff;
+    overflow:hidden;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
 .form {
-		max-width:500px;
-		min-width:500px;
-		padding:10px 50px;
-		border:2px solid gray;
-		border-radius:10px;
-		font-family:raleway;
-		background-color:#313131
+    max-width:500px;
+    min-width:500px;
+    padding:10px 50px;
+    border:2px solid gray;
+    border-radius:10px;
+    font-family:raleway;
+    background-color:#313131
 }
 
 img#close {
-		position:absolute;
-		right:-14px;
-		top:-14px;
-		cursor:pointer
+    position:absolute;
+    right:-14px;
+    top:-14px;
+    cursor:pointer
 }
 
 div#popupContact {
-		position:absolute;
-		left:50%;
-		top:17%;
-		margin-left:-202px;
-		font-family:'Raleway',sans-serif
+    position:absolute;
+    left:50%;
+    top:17%;
+    margin-left:-202px;
+    font-family:'Raleway',sans-serif
 }
 
 p {
-		margin-top:30px
+    margin-top:30px
 }
 
 #form h2 {
-		padding:20px 35px;
-		margin:-10px -50px;
-		text-align:center;
-		border-radius:10px 10px 0 0
+    padding:20px 35px;
+    margin:-10px -50px;
+    text-align:center;
+    border-radius:10px 10px 0 0
 }
 
 #form hr {
-		margin:10px -50px;
-		border:0;
-		border-top:1px solid #ccc
+    margin:10px -50px;
+    border:0;
+    border-top:1px solid #ccc
 }
 
 input[type=text] {
-		width:82%;
-		padding:10px;
-		margin-top:30px;
-		border:1px solid #ccc;
-		padding-left:40px;
-		font-size:16px;
-		font-family:raleway;
+    width:82%;
+    padding:10px;
+    margin-top:30px;
+    border:1px solid #ccc;
+    padding-left:40px;
+    font-size:16px;
+    font-family:raleway;
 }
 
 #name {
-		background-repeat:no-repeat;
-		background-position:5px 7px
+    background-repeat:no-repeat;
+    background-position:5px 7px
 }
 #email {
-		background-repeat:no-repeat;
-		background-position:5px 7px
+    background-repeat:no-repeat;
+    background-position:5px 7px
 }
 
 textarea {
-		background-repeat:no-repeat;
-		background-position:5px 7px;
-		width:82%;
-		height:95px;
-		padding:10px;
-		resize:none;
-		margin-top:30px;
-		border:1px solid #ccc;
-		padding-left:40px;
-		font-size:16px;
-		font-family:raleway;
-		margin-bottom:30px
+    background-repeat:no-repeat;
+    background-position:5px 7px;
+    width:82%;
+    height:95px;
+    padding:10px;
+    resize:none;
+    margin-top:30px;
+    border:1px solid #ccc;
+    padding-left:40px;
+    font-size:16px;
+    font-family:raleway;
+    margin-bottom:30px
 }
 
 #submit {
-		margin-top:30px;
-		text-decoration:none;
-		width:94%;
-		background-color:#6991f5;
-		color:#fff;
-		padding:10px 0;
-		font-size:20px;
-		cursor:pointer;
-		border-radius:5px
+    margin-top:30px;
+    text-decoration:none;
+    width:94%;
+    background-color:#6991f5;
+    color:#fff;
+    padding:10px 0;
+    font-size:20px;
+    cursor:pointer;
+    border-radius:5px
 }
 
 span {
-		font-weight:300;
+    font-weight:300;
 }
 
 button {
-		cursor:pointer;
+    cursor:pointer;
 }
 
 span#photo {
-		height: 125px;
-		width: 125px;
+    height: 125px;
+    width: 125px;
 }
 
