gold buttons index & family

--- a/family.css
+++ b/family.css
@@ -17,7 +17,17 @@ div#fam-head {
 }
 
 h2 {
-    line-height:0%
+    line-height:0%;
+}
+
+#form h2 {
+    font-family:georgia,serif;font-size:18px;
+    font-style:italic;
+    color:#3E2F2F;
+    letter-spacing:0;
+    line-height:1.429em;
+    padding:0;
+    text-align:center;
 }
 
 h4 {
@@ -32,15 +42,54 @@ div#print-div {
      text-align: center;
 }
 
-div#family-popup {
+#submitBtn {
+    margin-top: 5%;
+    width: 50%;
+}
+
+div#crmbuttons {
     padding-top: 3%
 }
 
-button {
-    cursor:pointer;
-    width: 45%;
+button.crmBtn{
+    width: 50%;
     height: 50px;
-    margin-top: 5%
+    box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(110,80,20,.4),
+    inset 0 -2px 5px 1px rgba(139,66,8,1),
+    inset 0 -1px 1px 3px rgba(250,227,133,1);
+    background-image: linear-gradient(160deg, #a54e07, #b47e11, #fef1a2, #bc881b, #a54e07);
+    border: 1px solid #a55d07;
+    color: rgb(120,50,5);
+    text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
+    transition: all .2s ease-in-out;
+    background-size: 100% 100%;
+    background-position:center;
+    border-radius: 5px;
+
+}
+
+button:after {
+    position: absolute;
+    opacity: 0;
+    top: 14px;
+    right: -20px;
+    transition: 0.5s;
+}
+
+button:focus,
+button:hover {
+    background-size: 150% 150%;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23),
+    inset 0 -2px 5px 1px #b17d10,
+    inset 0 -1px 1px 3px rgba(250,227,133,1);
+    border: 1px solid rgba(165,93,7,.6);
+    color: rgba(120,50,5,.8);
+}
+
+button:active {
+    box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(110,80,20,.4),
+    inset 0 -2px 5px 1px #b17d10,
+    inset 0 -1px 1px 3px rgba(250,227,133,1);
 }
 
 div#family-popup {
@@ -50,9 +99,9 @@ div#family-popup {
     left:0;
     display:none;
     position:fixed;
-    background-color:#ffffff;
     overflow:hidden;
-    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+    background-color:#e7e3e3;
+    box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(110,80,20,.4)
 }
 
 .form {
@@ -67,7 +116,6 @@ div#family-popup {
 
 #form h2 {
 		padding:20px 35px;
-		margin:-10px -50px;
 		text-align:center;
 		border-radius:10px 10px 0 0
 }
@@ -108,10 +156,6 @@ span#issueDate {
     text-align: right;
     display: inline-block;
     padding-left: 15px
-}
-
-button.crmBtn {
-    width: 75%
 }
 
 #formname2 {
