--- a/main.css
+++ b/main.css
@@ -333,7 +333,7 @@ p {
 h2 {
  font-family:georgia,serif;font-size:18px;
  font-style:italic;
- color:#3E2F2F;
+ color:#323131;
  letter-spacing:0;
  line-height:1.429em;
  padding:0;
