--- a/main.css
+++ b/main.css
@@ -130,6 +130,10 @@ only screen and (min-device-pixel-ratio : 1.5) {
     }
 }
 
+a {
+    text-decoration: none;
+}
+
 #name {
 	font-size: 25px;
 }
