--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 /* Smartphones (portrait and landscape) ----------- */
 @media all and (max-width:30em){
     button.crmBtn{
-        display:block;
+        display:inline-block;
         margin:0.4em auto;
     }
 }
